Fixed spacing on side panel. Made cursors pointers

--- a/frontend/src/components/LikeButton/LikeButton.css
+++ b/frontend/src/components/LikeButton/LikeButton.css
@@ -11,6 +11,7 @@
   background-color: transparent;
   font-size: 25px;
   border-radius: 5px;
+  cursor: pointer;
 }
 
 .like-button:hover {
